--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
     --cp-green: #6FA3A9;
     --cp-medium-blue: #5F72B2;
     --cp-purple: #60366F;
-
-
 }
 
 /* section above navbar */
@@ -18,6 +16,14 @@
     height: 120px;
 }
 
+.hexagon1 {
+    
+}
+
+.logo-above {
+    height: 150px;
+    width: 150px;
+}
 /* navbar */
 
 .container-fluid {
@@ -27,8 +33,9 @@
 }
 
 .navbar-logo-img {
-    height: 70px;
-    weight: 70px;
+    height: 50px;
+    weight: 50px;
+    margin-left: 10px;
 }
 
 .navbar-nav {
@@ -161,6 +168,7 @@
     background-color: var(--cp-yellow);
     height: 500px;
     width: 400px;
+    
 }
 
 .card-icon {
@@ -187,4 +195,168 @@
     color: white;
     text-align: center;
     margin: 0 10px;
+}   
+
+/* welcome-section */
+
+.welcome-sec{
+    margin-top: 50px;
+    width: 100%;
+    height: 550px;
+    /* background-color:#00000099; */
+    background: rgba(0,0,0,0.8);
+    position: relative;
+
+}
+
+.welcome-head {
+    position: absolute;
+    color: white;
+    font-size: 30pt;
+    font-weight: bold;
+    left: 200px;
+    top: 100px;
+}
+
+.hr-welcome {
+    position: absolute;
+    background-color: var(--cp-green);
+    height: 3px;
+    width: 200px;
+    left: 200px;
+    top: 230px;
+}
+
+.welcome-content {
+    position: absolute;
+    color: white;
+    left: 200px;
+    top: 245px;
+    width: 800px;
+    font-size: 13pt;
+}
+
+.welcome-sec-img {
+    position: absolute;
+    right:200px;
+    top: 70px;
+    
+}
+
+.btn-about-us {
+    position: absolute;
+    background-color: var(--cp-green);
+    font-weight: bold;
+    font-size: 16pt;
+    color: white;
+    border: none;
+    height: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+    z-index: 2;
+    top: 400px;
+    left: 200px;
+}
+
+.welcome-bg{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 550px;
+    object-fit: cover;
+    bottom: 0px;
+}
+
+/* gallery-section */
+
+.gallery-sec {
+    background-color: rgba(255,255,255,0.75);
+    height: 800px;
+    position: relative;
+}
+
+.gallery-head {
+    position: absolute;
+    color: black;
+    font-size: 30pt;
+    font-weight: bold;
+    left: 200px;
+    top: 100px;
+}
+
+.hr-gallery {
+    position: absolute;
+    background-color: var(--cp-green);
+    height: 4px;
+    width: 200px;
+    left: 200px;
+    top: 170px;
+}
+
+.gallery-bg {
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+    height: 800px;
+    object-fit: cover;
+}
+
+/* testimonial section */
+
+
+/* footer section */
+
+.footer-sec {
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(0,0,0,0.8);
+    width: 100%;
+    height: 500px;
+    justify-content: center;
+    gap: 400px;
+    align-items: center;
+}
+
+.logo-link-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.link-icon {
+    margin: 0 auto;
+}
+
+.link-icon-ins {
+    margin-right: 20px;
+}
+
+.footer-img {
+    height: 300px;
+    width: 300px;
+}
+
+.fa-instagram {
+    color: white;
+}
+
+.fa-facebook {
+    color: white;
+}
+
+.links-list {
+    color: white;
+    list-style: none;
+}
+
+.contact-list {
+    color: white;
+    list-style: none;
+}
+
+.footer-bg-img {
+    position: absolute;
+    z-index: -1;
+    height: 500px;
+    width: 100%;
+    object-fit: cover;
 }
